Merging algorithm and moveDetails in progress